# gitfs-builder

./: .drone.sec  .drone.sec.yml  .drone.yml  Makefile  README.md  VERSIONS
debian/: changelog  control  rules
debian-gitfs/: changelog  control  rules
debian-gitfs/patches/: 0001-fix-install-path.diff  0002-pex-local-archive.diff
debian-libgit2/: README.source  changelog  control  copyright  dfsg_clean.sh  gbp.conf  libgit2-23.lintian-overrides  libgit2-23.symbols  libgit2-28.symbols  libgit2.install  rules  source.lintian-overrides  watch
debian-libgit2-new/: clean  copyright  libgit2-24.lintian-overrides  libgit2-24.symbols  libgit2-dev.lintian-overrides  rules  watch
debian-libgit2-new/patches/: build_static.patch  disable_tests.patch
debian-libgit2-new/tests/: libgit2_test.c
debian-libgit2/patches/: disable-online-tests.patch  index-Fix-alignment-issues-in-write_disk_entry.patch  remove-mbedtls-from-pkgconfig.patch  revert-curl-no-encrypt.patch  series  u-segfault-2-fix.patch  u-segfault-fix.patch  use-curl-stream.patch  use-mbedtls.patch
debian-libgit2/source/: lintian-overrides
debian-libgit2/tests/: control
debian-orig-libgit2/: control  docs  libgit2-dev.install  source.lintian-overrides
debian-orig-libgit2/tests/: CMakeLists.txt
debian-pex/: changelog  control  rules
debian-python-pex/: .git-dpm  README.source  changelog  control  copyright  pex.manpages  rules  watch
debian-python-pex/patches/: handle-pkg_resources-devendorization.patch  series
debian-python-pex/tests/: control  execute.sh
debian/patches/: series
(+1 files in other folders)
